--- a/package.json
+++ b/package.json
@@ -31,6 +31,10 @@
     "@playwright/test": "^1.48.2",
     "@typescript-eslint/eslint-plugin": "^8.15.0",
     "@typescript-eslint/parser": "^8.15.0",
+    "@tsconfig/node20": "^20.1.2",
+    "@types/node": "^20.0.0",
+    "typescript": "~5.3.0",
+    "vue-tsc": "^1.8.25",
     "@vitejs/plugin-vue": "^5.1.4",
     "@vitest/eslint-plugin": "1.1.7",
     "@vue/eslint-config-prettier": "^10.1.0",
