--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,10 +12,9 @@
     "allowJs": true,
     /* Bundler mode */
     "moduleResolution": "bundler",
-    "allowImportingTsExtensions": true,
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "noEmit": true,
+    "noEmit": false,
     "jsx": "preserve",
     /* Linting */
     "strict": true,
